--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,6 @@ include(cmake/pimoroni_pico_import.cmake)
 
 project(badge-sw C CXX ASM)
 
-# Set up compile definitions
-add_compile_definitions(PICO_FLASH_SIZE_BYTES=1048576)
-add_compile_definitions(PICO)
-
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
@@ -48,8 +44,6 @@ include(libraries/bitmap_fonts/bitmap_fonts)
 include(libraries/pico_graphics/pico_graphics)
 include(common/pimoroni_bus)
 include(drivers/uc8151/uc8151)
-
-include(cmake/littlefs.cmake)
 
 # Add executable. Default name is the project name, version 0.1
 
@@ -72,16 +66,14 @@ target_link_libraries(badge-sw
 target_include_directories(badge-sw PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
   jerryscript_install/include
-  external/littlefs
 )
 
 target_sources(badge-sw PRIVATE
     src/main.cpp
     src/launcher.cpp
     src/lib/display.cpp
-    src/lib/fs.c
+    src/lib/fs.cpp
     src/assets/Revolution-logo.h
-    src/assets/DM-SemiBold-75.hpp
 
 )
 
@@ -96,6 +88,7 @@ target_link_libraries(badge-sw
         "${CMAKE_CURRENT_SOURCE_DIR}/jerryscript_install/lib/libjerry-port-default.a"
     )
 
+include(cmake/pico_filesystem.cmake)
 
 pico_add_extra_outputs(badge-sw)
 
