--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ pico_enable_stdio_usb(badge-sw 1)
 # Add the standard library to the build
 target_link_libraries(badge-sw
         pico_stdlib
+        pico_multicore
     )
 
 # Add the standard include files to the build
@@ -72,6 +73,7 @@ target_sources(badge-sw PRIVATE
     src/launcher.cpp
     src/lib/display.cpp
     src/lib/fs.cpp
+    src/lib/serial_api.cpp
     src/assets/Revolution-logo.h
 
 )
